Fix overlapping tab class in home

--- a/src/routes/Donation/components/DonationView.scss
+++ b/src/routes/Donation/components/DonationView.scss
@@ -77,7 +77,7 @@
     }
 }
 
-.tab {
+.digital__tab {
     height: 75px;
     margin-top: 0;
     background-color: $color-grey-4;
